# tub-modules

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
app/: Cargo.toml  package-lock.json  package.json
app/src/: app.rs  lib.rs  main.rs  scraper_state.rs  scraper_types.rs  starred.rs
app/src/api/: mod.rs  module_detail.rs  modules.rs  scraper.rs
app/src/components/: mod.rs
app/src/models/: mod.rs  module_detail.rs  module_summary.rs
app/style/: tailwind.css
db/: Cargo.toml
db/migrations/: 20250101000000_init.down.sql  20250101000000_init.up.sql  20250102000000_link_exams_to_modules.down.sql  20250102000000_link_exams_to_modules.up.sql  20250103000000_change_exam_type_to_text.down.sql  20250103000000_change_exam_type_to_text.up.sql  20250104000000_change_duration_to_text.down.sql  20250104000000_change_duration_to_text.up.sql  20250105000000_fix_module_catalog_usage.down.sql  20250105000000_fix_module_catalog_usage.up.sql  20250106000000_add_praktisch_exam_category.down.sql  20250106000000_add_praktisch_exam_category.up.sql  20250107000000_change_component_type_to_text.down.sql  20250107000000_change_component_type_to_text.up.sql  20250108000000_add_scraping_runs.down.sql  20250108000000_add_scraping_runs.up.sql
db/src/: connection.rs  error.rs  lib.rs  models.rs
deployment/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
moses-scraper/: Cargo.toml
moses-scraper/src/: db_ops.rs  lib.rs  main.rs  mapper.rs  models.rs  module.rs  runner.rs  search.rs
(+40 files in other folders)
